k8s/overlays/coreso/prod/gridcapa-ingress-middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-d2cc
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/d2cc/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-d2cc-config
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/d2cc/config/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-d2cc-config-notification
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/d2cc/config-notification/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-d2cc-gridcapa-job-launcher
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/d2cc/gridcapa-job-launcher/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-d2cc-task-manager
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/d2cc/task-manager/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-d2cc-task-notification
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/d2cc/task-notification/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-idcc
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/idcc/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-idcc-config
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/idcc/config/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-idcc-config-notification
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/idcc/config-notification/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-idcc-gridcapa-job-launcher
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/idcc/gridcapa-job-launcher/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-idcc-task-manager
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/idcc/task-manager/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-cse-import-idcc-task-notification
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /cse/import/idcc/task-notification/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-apps-metadata
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /apps-metadata/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: gridcapa.ingress-gridcapa-vaas.rh.1648.local-utils-rabbitmq
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /utils/rabbitmq/
