k8s/overlays/coreso/prod/gridcapa-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gridcapa
    component: gateway
spec:
  selector:
    matchLabels:
      app: gridcapa
      component: gateway
  template:
    metadata:
      labels:
        app: gridcapa
        component: gateway
    spec:
      containers:
        - name: gateway
          image: gridcapa-gateway
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: gateway-configmap-volume
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
          resources:
            requests:
              memory: "384Mi"
            limits:
              memory: "384Mi"
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
      restartPolicy: Always
      volumes:
        - name: gateway-configmap-volume
          configMap:
            name: gateway-configmap
        - name: tmp-emptydir
          emptyDir: {}
