k8s/overlays/coreso/prod/gridcapa-ingress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    app: gridcapa
    component: gridcapa
  name: gridcapa-minio
  namespace: default
spec:
  rules:
    - host: gridcapa.ingress-gridcapa-vaas.rh.1648.local
      http:
        paths:
          - backend:
              service:
                name: gridcapa-minio
                port:
                  number: 9000
            path: /minio
            pathType: Prefix
  tls:
    - hosts:
        - gridcapa.ingress-gridcapa-vaas.rh.1648.local
      secretName: ingresswildcard
