k8s/overlays/coreso/prod/gridcapa-ingress-web.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
  name: gridcapa
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`gridcapa.ingress-gridcapa-vaas.rh.1648.local`) && PathPrefix(`/cse/import/idcc/`)
      services:
        - kind: Service
          name: cse-import-idcc-gridcapa-app
          namespace: default
          port: 80
